deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cert-demo
  name: cert-demo-deployment
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cert-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cert-demo
    spec:
      containers:
      - name: cert-demo-app
        image: singhragvendra503/mavenwebapp:20
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cert-demo
  name: cert-demo-svc
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cert-demo
  type: ClusterIP
